// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
.c0 {
  width: 47%;
  padding: 0.6rem 0rem;
  border: none;
  border-radius: 2px;
  background-color: #f7f9f9;
  font-size: 2.3rem;
  font-family: 'Oswald',sans-serif;
  text-transform: uppercase;
  color: #1982C4;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c0:active {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c0:focus {
  border: none;
  outline: solid 2px #8AC926;
}

.c0:disabled {
  -webkit-filter: brightness(0.6);
  filter: brightness(0.6);
  cursor: wait;
}

<button
  className="c0"
  onClick={[MockFunction]}
>
  Button
</button>
`;

exports[`Primary button renders correctly 1`] = `
.c0 {
  width: 47%;
  padding: 0.6rem 0rem;
  border: none;
  border-radius: 2px;
  background-color: #f7f9f9;
  font-size: 2.3rem;
  font-family: 'Oswald',sans-serif;
  text-transform: uppercase;
  color: #1982C4;
  color: #f7f9f9;
  background-color: #8AC926;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c0:active {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c0:focus {
  border: none;
  outline: solid 2px #8AC926;
}

.c0:disabled {
  -webkit-filter: brightness(0.6);
  filter: brightness(0.6);
  cursor: wait;
}

.c0:focus {
  outline: solid 2px #f7f9f9;
}

<button
  className="sc-AxjAm c0"
  onClick={[MockFunction]}
>
  Button
</button>
`;
